--- a/regreplaceR.Rcheck/00_pkg_src/regreplaceR/inst/doc/regreplaceR.Rmd
+++ b/regreplaceR.Rcheck/00_pkg_src/regreplaceR/inst/doc/regreplaceR.Rmd
@@ -14,15 +14,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-# regregplaceR
+# regreplaceR
 
 This R package provides 4 tiny regex tools to extract, match, and replace named regex groups in strings. 
-It contains in addition to 3 functions `groups()`, `match_group()` and `replace_group()` a `R6` class `Replacer` 
+It contains in addition to 3 functions `groups()`, `match_group()` and `replace_group()` and an `R6` class `Replacer` 
 which is thought as the main interface of this package.
 
 ## Installation
 
-You can install this package by installing it from CRAN or from this github repository.
+You can install this package by installing it from CRAN or from this GitHub repository.
 
 ```{r, eval=FALSE}
 # install directly from CRAN
